@@ -28,6 +28,7 @@ namespace studio {
 class GamsProcess final : public AbstractGamsProcess
 {
     Q_OBJECT
+
 public:
     GamsProcess(QObject *parent = nullptr);
 
