@@ -9,12 +9,15 @@ INCLUDEPATH +=  \
 
 HEADERS += \
     testdialogfilefilter.h \
+    $$SRCPATH/common.h     \
+    $$SRCPATH/commonpaths.h \
     $$SRCPATH/viewhelper.h \
     $$SRCPATH/file/filetype.h
 
 SOURCES += \
     testdialogfilefilter.cpp \
     $$SRCPATH/commonpaths.cpp \
+    $$SRCPATH/common.cpp                        \
     $$SRCPATH/exception.cpp \
     $$SRCPATH/editors/defaultsystemlogger.cpp \
     $$SRCPATH/editors/sysloglocator.cpp \
